@startuml{table.png}

class Mylist {
  +name: string
  +description: text
}

class Link {
  +title: string
  +url: string
  +description: text
}

class Tag {
  +name: string
}

class MylistTag {
  +mylist_id: integer
  +tag_id: integer
}

class LinkTag {
  +link: integer
  +tag_id: integer
}

Mylist "1" o-- "*" Mylist
Mylist "1" o-- "*" Link
Mylist "1" o-- "*" MylistTag

MylistTag "*" --o "1" Tag
LinkTag "*" --o "1" Tag

Link "1" o-- "*" LinkTag

@enduml
